[package]
name = "habitat-builder-protocol"
version = "0.0.0"
authors = ["Adam Jacob <adam@chef.io>", "Jamie Winsor <reset@chef.io>", "Fletcher Nichol <fnichol@chef.io>", "Joshua Timberman <joshua@chef.io>", "Dave Parfitt <dparfitt@chef.io>"]
description = "Habitat Builder Network Server Protocol"
build = "build.rs"
workspace = "../../"

[dependencies]
clippy = { version = "*", optional = true }
fnv = "*"
protobuf = "*"
serde = "*"
serde_derive = "*"
time = "*"
regex = "*"
lazy_static = "*"

[dependencies.habitat_core]
path = "../core"

[build-dependencies]
pkg-config = "0.3"

[features]
protocols = []
