[package]
name = "habitat_builder_router"
version = "0.0.0"
authors = ["Adam Jacob <adam@chef.io>", "Jamie Winsor <reset@chef.io>", "Fletcher Nichol <fnichol@chef.io>", "Joshua Timberman <joshua@chef.io>", "Dave Parfitt <dparfitt@chef.io>"]
description = "Habitat-Builder Database Access Library"
build = "../bldr-build.rs"
workspace = "../../"

[[bin]]
name = "bldr-router"
doc = false

[dependencies]
env_logger = "*"
log = "*"
protobuf = "*"
rand = "*"
serde = "*"
serde_derive = "*"
toml = { version = "*", features = ["serde"], default-features = false }

[dependencies.clap]
version = "*"
features = [ "suggestions", "color", "unstable" ]

[dependencies.zmq]
git = "https://github.com/erickt/rust-zmq"
branch = "release/v0.8"

[dependencies.habitat_builder_protocol]
path = "../builder-protocol"

[dependencies.habitat_core]
path = "../core"

[dependencies.habitat_net]
path = "../net"
