[package]
name = "habitat_builder_router"
version = "0.0.0"
authors = ["Adam Jacob <adam@chef.io>", "Jamie Winsor <reset@chef.io>", "Fletcher Nichol <fnichol@chef.io>", "Joshua Timberman <joshua@chef.io>", "Dave Parfitt <dparfitt@chef.io>"]
description = "Habitat-Builder Database Access Library"
build = "../build-builder.rs"
workspace = "../../"

[[bin]]
name = "bldr-router"
path = "src/main.rs"
doc = false

[profile.release]
debug = true

[dependencies]
clippy = {version = "*", optional = true}
env_logger = "*"
habitat-builder-protocol = { path = "../builder-protocol" }
habitat_core = { path = "../core" }
habitat_net = { path = "../net" }
log = "*"
protobuf = "*"
rand = "*"
serde = "*"
serde_derive = "*"
toml = { version = "*", features = ["serde"], default-features = false }

[dependencies.clap]
version = "*"
features = [ "suggestions", "color", "unstable" ]

[dependencies.zmq]
git = "https://github.com/erickt/rust-zmq"
branch = "release/v0.8"
