[package]
name = "habitat_builder_scheduler"
version = "0.0.0"
authors = ["Adam Jacob <adam@chef.io>", "Jamie Winsor <reset@chef.io>", "Fletcher Nichol <fnichol@chef.io>", "Joshua Timberman <joshua@chef.io>", "Dave Parfitt <dparfitt@chef.io>"]
description = "Habitat-Builder Job Scheduler"
build = "../bldr-build.rs"
workspace = "../../"

[[bin]]
name = "bldr-scheduler"
doc = false

[dependencies]
clippy = {version = "*", optional = true}
env_logger = "*"
linked-hash-map = "*"
log = "*"
rand = "*"
time = "*"
protobuf = "*"
postgres = { version = "*", features = ["with-chrono"] }
hyper = "*"
r2d2 = "*"
serde = "*"
serde_derive = "*"
toml = { version = "*", features = ["serde"], default-features = false }
chrono = { version = "*", features = ["serde"] }

[dependencies.clap]
version = "*"
features = [ "suggestions", "color", "unstable" ]

[dependencies.habitat_core]
path = "../core"

[dependencies.builder_core]
path = "../builder-core"

[dependencies.habitat_builder_protocol]
path = "../builder-protocol"

[dependencies.habitat_depot_client]
path = "../builder-depot-client"

[dependencies.habitat_api_client]
path = "../builder-api-client"

[dependencies.habitat_net]
path = "../net"

[dependencies.habitat_builder_db]
path = "../builder-db"

[dependencies.zmq]
git = "https://github.com/erickt/rust-zmq"
branch = "release/v0.8"

[features]
default = []
functional = []
