[package]
name = "habitat_builder_vault"
version = "0.1.0"
authors = ["Adam Jacob <adam@chef.io>", "Jamie Winsor <reset@chef.io>", "Fletcher Nichol <fnichol@chef.io>", "Joshua Timberman <joshua@chef.io>", "Dave Parfitt <dparfitt@chef.io>"]
description = "Habitat-Builder Vault Server"

[[bin]]
name = "bldr-vault"
doc = false

[dependencies]
env_logger = "*"
log = "*"
protobuf = "*"
r2d2 = "*"
redis = "*"
rustc-serialize = "*"

[dependencies.clap]
version = "*"
features = [ "suggestions", "color", "unstable" ]

[dependencies.r2d2_redis]
git = "https://github.com/chef/r2d2-redis.git"
branch = "update-r2d2"

[dependencies.zmq]
# git = "https://github.com/erickt/rust-zmq.git"
git = "https://github.com/reset/rust-zmq.git"
branch = "build-rs"

[dependencies.habitat_builder_dbcache]
path = "../builder-dbcache"

[dependencies.habitat_builder_protocol]
path = "../builder-protocol"

[dependencies.habitat_net]
path = "../net"
