[package]
name = "habitat_builder_vault"
version = "0.7.0"
authors = ["Adam Jacob <adam@chef.io>", "Jamie Winsor <reset@chef.io>", "Fletcher Nichol <fnichol@chef.io>", "Joshua Timberman <joshua@chef.io>", "Dave Parfitt <dparfitt@chef.io>"]
description = "Habitat-Builder Vault Server"
build = "build.rs"

[[bin]]
name = "bldr-vault"
doc = false

[dependencies]
env_logger = "*"
lazy_static = "*"
log = "*"
num_cpus = "*"
protobuf = "*"
r2d2 = "*"
r2d2_redis = "*"
redis = "*"
rustc-serialize = "*"
toml = "*"

[dependencies.clap]
version = "*"
features = [ "suggestions", "color", "unstable" ]

[dependencies.zmq]
# git = "https://github.com/erickt/rust-zmq.git"
git = "https://github.com/reset/rust-zmq.git"
branch = "habitat"

[dependencies.habitat_core]
path = "../core"

[dependencies.habitat_builder_dbcache]
path = "../builder-dbcache"

[dependencies.habitat_builder_protocol]
path = "../builder-protocol"

[dependencies.habitat_net]
path = "../net"

[features]
functional = []
