[package]
name = "habitat_builder_vault"
version = "0.0.0"
authors = ["Adam Jacob <adam@chef.io>", "Jamie Winsor <reset@chef.io>", "Fletcher Nichol <fnichol@chef.io>", "Joshua Timberman <joshua@chef.io>", "Dave Parfitt <dparfitt@chef.io>"]
description = "Habitat-Builder Vault Server"
build = "../bldr-build.rs"
workspace = "../../"

[[bin]]
name = "bldr-vault"
doc = false

[dependencies]
env_logger = "*"
log = "*"
protobuf = "*"
rustc-serialize = "*"
toml = "*"

[dependencies.clap]
version = "*"
features = [ "suggestions", "color", "unstable" ]

[dependencies.habitat_core]
path = "../core"

[dependencies.habitat_builder_dbcache]
path = "../builder-dbcache"

[dependencies.habitat_builder_protocol]
path = "../builder-protocol"

[dependencies.habitat_net]
path = "../net"

[dependencies.redis]
git = "https://github.com/habitat-sh/redis-rs"
branch = "habitat"

[dependencies.zmq]
git = "https://github.com/erickt/rust-zmq"
branch = "release/v0.8"

[replace]
"redis:0.7.0" = { git = 'https://github.com/habitat-sh/redis-rs', branch = 'habitat' }

[features]
functional = []
