[package]
name = "habitat_butterfly_test"
version = "0.1.0"
edition = "2018"
authors = ["The Habitat Maintainers <humans@habitat.sh>"]
workspace = "../../"

[dependencies]
lazy_static = "*"
log = "*"
time = "*"

[dependencies.habitat_butterfly]
path = "../butterfly"

[dependencies.habitat_core]
git = "https://github.com/habitat-sh/core.git"

[features]
default = []
