[package]
name = "habitat_butterfly_test"
version = "0.1.0"
edition = "2018"
authors = ["The Habitat Maintainers <humans@habitat.sh>"]
workspace = "../../"

[dependencies]
habitat_butterfly = { path = "../butterfly" }
habitat_core = { path = "../core" }
lazy_static = "*"
log = "*"
parking_lot = "*"
time = "*"

[features]
default = []
deadlock_detection = ["parking_lot/nightly", "parking_lot/deadlock_detection"]
