[package]
name = "habitat_butterfly"
version = "0.1.0"
edition = "2018"
authors = ["The Habitat Maintainers <humans@habitat.sh>"]
build = "build.rs"
workspace = "../../"

[[bin]]
name = "butterfly"
path = "src/main.rs"
doc = false

[dependencies]
byteorder = "*"
bytes = "*"
env_logger = "*"
habitat_core = { path = "../core" }
habitat_common = { path = "../common" }
log = "*"
lazy_static = "*"
prometheus = "*"
parking_lot = "*"
prost = "*"
prost-derive = "*"
rand = "*"
serde = { version = "*", features = ["rc"] }
serde_derive = "*"
serde_json = "*"
tempfile = "*"
threadpool = "*"
toml = { version = "*", default-features = false }
uuid = { version = "*", features = ["v4"] }
zmq = { version = "*" }

[target.'cfg(windows)'.dependencies]
winapi = { version = "*", features = ["handleapi", "winbase"] }

[dev-dependencies]
mktemp = "*"

[build-dependencies]
prost-build = "*"

[features]
default = []
lock_as_rwlock = ["habitat_common/lock_as_rwlock"]
lock_as_mutex = ["habitat_common/lock_as_mutex"]
deadlock_detection = ["parking_lot/nightly", "parking_lot/deadlock_detection", "habitat_common/deadlock_detection"]
