[package]
name = "habitat_butterfly"
version = "0.1.0"
edition = "2024"
authors = ["The Habitat Maintainers <humans@habitat.sh>"]
build = "build.rs"
workspace = "../../"

[[bin]]
name = "butterfly"
path = "src/main.rs"
doc = false

[dependencies]
byteorder = "*"
bytes = "*"
env_logger = "*"
habitat_core = { path = "../core" }
habitat_common = { path = "../common" }
log = "0.4"
lazy_static = "*"
prometheus = { version = "*", default-features = false }
parking_lot = "*"
prost = { version = "*", features = ["derive"] }
rand = "*"
serde = { version = "*", features = ["derive", "rc"] }
serde_json = { version = "*", features = ["preserve_order"] }
tempfile = "*"
threadpool = "*"
toml = { version = "*", features = ["preserve_order"] }
uuid = { version = "*", features = ["v4"] }
zmq = "*"

[target.'cfg(windows)'.dependencies]
winapi = { version = "^0.3", features = ["handleapi", "winbase"] }

[dev-dependencies]
mktemp = "*"

[build-dependencies]
prost-build = "*"

[features]
default = []
lock_as_rwlock = ["habitat_common/lock_as_rwlock"]
lock_as_mutex = ["habitat_common/lock_as_mutex"]
deadlock_detection = ["parking_lot/nightly", "parking_lot/deadlock_detection", "habitat_common/deadlock_detection"]
