[package]
name = "habitat_common"
version = "0.0.0"
edition = "2018"
authors = ["The Habitat Maintainers <humans@habitat.sh>"]
build = "../build-habitat.rs"
workspace = "../../"

[dependencies]
bimap = "*"
bitflags = "*"
clap = { version = "*", features = [ "suggestions", "color", "unstable" ] }
glob = "*"
habitat_api_client = { path = "../builder-api-client" }
habitat_core = { path = "../core" }
# The handlebars crate has a few issues that require us to lock at 0.28.3
# until further notice.
#
# - 0.30.0 bumps to a version of the `pest` crate that fails to build
#   on Windows.
# - 0.29.0 makes a change to array processing that is incompatible
#   with our templating syntax; we use "foo[0]", but it now requires
#   "foo.[0]"
#   See https://github.com/sunng87/handlebars-rust/commit/707f05442ef6f441a1cfc6b13ac180b78cb296db
handlebars = { version = "= 0.28.3", default-features = false }
json = "*"
lazy_static = "*"
libc = "*"
log = "*"
native-tls = "*"
parking_lot = "*"
pbr = "*"
petgraph = "*"
regex = "*"
# Locked on this version of reqwest until we can go fully async: see
# https://github.com/seanmonstar/reqwest/commit/5096e12fa21ffdf62ce953c7514e772959d1e4e1
# and https://github.com/habitat-sh/habitat/issues/6852
reqwest = "=0.9.17"
serde = "*"
serde_derive = "*"
serde_json = "*"
serde-transcode = "*"
serde_yaml = "*"
tempfile = "*"
retry = "*"
termcolor = "*"
time = "*"
toml = { version = "*", default-features = false }
uuid = { version = "*", features = ["v4"] }
valico = "*"

[target.'cfg(windows)'.dependencies]
winapi = { version = "*", features = ["consoleapi", "processenv"] }

[features]
default = []
deadlock_detection = []
lock_as_rwlock = []
lock_as_mutex = []
functional = []
