[package]
name = "habitat_common"
version = "0.0.0"
edition = "2021"
authors = ["The Habitat Maintainers <humans@habitat.sh>"]
build = "../build-habitat.rs"
workspace = "../../"

[dependencies]
async-trait = "*"
bimap = "*"
bitflags = "*"
# TODO: When we finally get rid of everything, in clap_v2 make it just `clap`.
# This is required right now because we would like to start common Validation code for all
# the other packages that are using it.
clap_v4 = { package = "clap", version = "4", features = ["derive" ] }
dirs = "*"
glob = "*"
habitat_api_client = { path = "../builder-api-client" }
habitat_core = { path = "../core" }
# The handlebars crate has a few issues that require us to lock at 0.28.3
# until further notice.
#
# - 0.30.0 bumps to a version of the `pest` crate that fails to build
#   on Windows.
# - 0.29.0 makes a change to array processing that is incompatible
#   with our templating syntax; we use "foo[0]", but it now requires
#   "foo.[0]"
#   See https://github.com/sunng87/handlebars-rust/commit/707f05442ef6f441a1cfc6b13ac180b78cb296db
handlebars = { version = "*", default-features = false }
lazy_static = "*"
libc = "*"
log = "0.4"
native-tls = { version = "*", features = ["vendored"] }
safer_owning_ref = "*"
parking_lot = "*"
pbr = "*"
petgraph = "*"
regex = "*"
reqwest = { version = "*", features = ["blocking", "json", "stream"] }
serde = { version = "*", features = ["derive"] }
serde_json = { version = "*", features = ["preserve_order"] }
serde_yaml = "*"
tempfile = "*"
thiserror = "*"
retry = { git = "https://github.com/habitat-sh/retry", features = [
  "asynchronous",
] }
rustls = "*"
termcolor = "*"
tokio = { version = "*", features = ["full"] }
toml = { version = "*", features = ["preserve_order"] }
uuid = { version = "*", features = ["v4"] }
valico = "*"
url = { version = "*" }

syn = "*"
proc-macro2 = "*"

[target.'cfg(not(windows))'.dependencies]
nix = { version = "*", features = ["signal", "user"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "^0.3", features = ["consoleapi", "processenv"] }

[features]
default = []
deadlock_detection = []
lock_as_rwlock = []
lock_as_mutex = []
functional = []
