[package]
name = "habitat_common"
version = "0.0.0"
edition = "2024"
authors = ["The Habitat Maintainers <humans@habitat.sh>"]
build = "../build-habitat.rs"
workspace = "../../"

[dependencies]
# Please keep these alphabetized
async-trait = "*"
bimap = "*"
bitflags = "*"
# TODO: When we finally get rid of everything, in clap_v2 make it just `clap`.
# This is required right now because we would like to start common Validation code for all
# the other packages that are using it.
clap_v4 = { package = "clap", version = "4", features = ["derive"] }
dirs = "*"
glob = "*"
habitat_api_client = { path = "../builder-api-client" }
habitat_core = { path = "../core" }
handlebars = { version = "*", default-features = false }
lazy_static = "*"
libc = "*"
log = "0.4"
native-tls = { version = "*", features = ["vendored"] }
parking_lot = "*"
pbr = "*"
petgraph = "*"
proc-macro2 = "*"
regex = "*"
# reqwest 0.13.0 changed the default TLS support from native-tls to rustls
# this feature configuration is about using the features that were in effect
# when our code was still locked to 0.12.8 (so reqwest defaults + our additions)
reqwest = { version = "*", default-features = false, features = [
    "blocking",
    "charset",
    "http2",
    "json",
    "native-tls-no-alpn",
    "stream",
    "system-proxy",
] }
retry = { git = "https://github.com/habitat-sh/retry", features = ["asynchronous"] }
rustls = "*"
safer_owning_ref = "*"
serde = { version = "*", features = ["derive"] }
serde_json = { version = "*", features = ["preserve_order"] }
serde_yaml = "*"
syn = "*"
tempfile = "*"
termcolor = "*"
thiserror = "*"
tokio = { version = "*", features = ["full"] }
toml = { version = "*", features = ["preserve_order"] }
url = { version = "*" }
uuid = { version = "*", features = ["v4"] }
valico = "*"

[target.'cfg(not(windows))'.dependencies]
nix = { version = "*", features = ["signal", "user"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "^0.3", features = ["consoleapi", "processenv"] }

[features]
deadlock_detection = []
default = []
functional = []
lock_as_mutex = []
lock_as_rwlock = []
