[package]
name = "habitat_core"
version = "0.0.0"
edition = "2018"
authors = ["The Habitat Maintainers <humans@habitat.sh>"]
workspace = "../../"
build = "build.rs"

[build-dependencies]
base64 = "*"
cc = "*"

[dependencies]
base64 = "*"
blake2b_simd = "*"
chrono = "*"
dirs = "*"
dns-lookup = "*"
errno = "*"
glob = "*"
hex = "*"
lazy_static = "*"
libc = "*"
log = "*"
native-tls = { version = "*", features = ["vendored"] }
os_info = "*"
paste = "*"
pem = "*"
pin-project = "*"
rand = "*"
regex = "*"
rcgen = "*"
rustls = "0.19.1"
serde = "*"
serde_derive = "*"
serde_json = { version = "*", features = [ "preserve_order" ] }
sodiumoxide = "*"
tabwriter = "*"
tar = "*"
tempfile = "*"
thiserror = "*"
tokio = { version = "1.9.0", features = ["full"] }
tokio-rustls = "0.22.0"
toml = { version = "0.5.9", features = [ "preserve_order" ] }
typemap = "*"
url = "*"
webpki = "*"
xz2 = "*"

[target.'cfg(not(windows))'.dependencies]
nix = "*"
[target.'cfg(target_os = "linux")'.dependencies]
caps = "*"

[target.'cfg(windows)'.dependencies]
ctrlc = "*"
habitat_win_users = { path = "../win-users" }
widestring = "*"
winapi = { version = "*", features = ["dpapi", "ioapiset", "namedpipeapi", "userenv", "winbase", "wincrypt", "winerror"] }
windows-acl = "*"

[dev-dependencies]
num_cpus = "*" # For doc tests
serde_test = "*"
reqwest = {version = "*", features = ["blocking"]}

[features]
default = ["supported_targets"]
functional = []
supported_targets = ["x86_64-darwin", "x86_64-linux", "x86_64-linux-kernel2", "x86_64-windows", "aarch64-darwin", "aarch64-linux"]
x86_64-darwin = []
x86_64-linux = []
x86_64-linux-kernel2 = []
x86_64-windows = []
aarch64-darwin = []
aarch64-linux = []
