[package]
name = "habitat_core"
version = "0.0.0"
edition = "2018"
authors = ["The Habitat Maintainers <humans@habitat.sh>"]
workspace = "../../"
build = "build.rs"

[build-dependencies]
base64 = "*"
cc = "*"
pem = "*"

[dependencies]
base64 = "*"
blake2b_simd = "*"
chrono = "*"
dirs = "*"
dns-lookup = "*"
errno = "*"
glob = "*"
hex = "*"
lazy_static = "*"
libc = "*"
log = "0.4"
native-tls = { version = "*", features = ["vendored"] }
os_info = "*"
pem = "*"
pin-project = "*"
rand = { version = "*", features = ["thread_rng"] }
regex = "*"
rcgen = "*"
rustls = "*"
rustls-pemfile = "*"
serde = { version = "*", features = ["derive"] }
serde_json = { version = "*", features = ["preserve_order"] }
sodiumoxide = "*"
tabwriter = "*"
tar = "*"
tempfile = "*"
thiserror = "*"
tokio = { version = "*", features = ["full"] }
tokio-rustls = "*"
toml = { version = "*", features = ["preserve_order"] }
url = "*"
rustls-webpki = "*"
xz2 = "*"

[target.'cfg(not(windows))'.dependencies]
nix = { version = "*", features = ["signal", "user", "fs"] }
[target.'cfg(target_os = "linux")'.dependencies]
caps = "*"

[target.'cfg(windows)'.dependencies]
ctrlc = "*"
habitat_win_users = { path = "../win-users" }
widestring = "*"
winapi = { version = "^0.3", features = [
  "dpapi",
  "ioapiset",
  "namedpipeapi",
  "synchapi",
  "winbase",
  "wincrypt",
  "winerror",
  "ws2def",
] }
windows-acl = "*"
windows-sys = { version = "^0.52.0", features = [
  "Win32_Foundation",
  "Win32_System_Environment",
] }

[dev-dependencies]
num_cpus = "*"                                       # For doc tests
serde_test = "*"
reqwest = { version = "*", features = ["blocking"] }

[features]
default = ["supported_targets"]
functional = []
supported_targets = [
  "x86_64-darwin",
  "x86_64-linux",
  "x86_64-windows",
  "aarch64-darwin",
  "aarch64-linux",
]
x86_64-darwin = []
x86_64-linux = []
x86_64-windows = []
aarch64-darwin = []
aarch64-linux = []
