[package]
name = "habitat_depot_client"
version = "0.6.0"
authors = ["Adam Jacob <adam@chef.io>", "Jamie Winsor <reset@chef.io>", "Fletcher Nichol <fnichol@chef.io>", "Joshua Timberman <joshua@chef.io>", "Dave Parfitt <dparfitt@chef.io>"]

[dependencies]
broadcast = "*"
hyper = "*"
log = "*"
pbr = "*"
rustc-serialize = "*"
tee = "*"
url = "*"

[dependencies.habitat_core]
path = "../core"

[dependencies.habitat_depot_core]
path = "../depot-core"

[features]
functional = []
