[package]
name = "habitat_depot_client"
version = "0.8.0"
authors = ["Adam Jacob <adam@chef.io>", "Jamie Winsor <reset@chef.io>", "Fletcher Nichol <fnichol@chef.io>", "Joshua Timberman <joshua@chef.io>", "Dave Parfitt <dparfitt@chef.io>"]

[dependencies]
broadcast = "*"
hyper = "*"
log = "*"
pbr = "*"
rustc-serialize = "*"
tee = "*"
url = "*"

[dependencies.habitat_builder_protocol]
path = "../builder-protocol"

[dependencies.habitat_core]
path = "../core"

[dependencies.habitat_http_client]
path = "../http-client"

[features]
functional = []
