[package]
name = "bldr_depot_core"
version = "0.4.0"
authors = ["Adam Jacob <adam@chef.io>", "Jamie Winsor <reset@chef.io>", "Fletcher Nichol <fnichol@chef.io>", "Joshua Timberman <joshua@chef.io>", "Dave Parfitt <dparfitt@chef.io>"]

[dependencies]
hyper = "*"
libc = "*"
lmdb-sys = "*"
rustc-serialize = "*"

[dependencies.bldr_core]
path = "../core"
