[package]
name = "habitat_depot"
version = "0.4.0"
authors = ["Adam Jacob <adam@chef.io>", "Jamie Winsor <reset@chef.io>", "Fletcher Nichol <fnichol@chef.io>", "Joshua Timberman <joshua@chef.io>", "Dave Parfitt <dparfitt@chef.io>"]
build = "build.rs"

[[bin]]
name = "hab-depot"
doc = false

[dependencies]
bitflags = "*"
env_logger = "*"
hyper = "*"
iron = "*"
libc = "*"
lazy_static = "*"
libarchive = "*"
log = "*"
openssl = "*"
r2d2 = "*"
redis = "*"
regex = "*"
router = "*"
rust-crypto = "*"
rustc-serialize = "*"
time = "*"
toml = "*"
urlencoded = "*"
walkdir = "*"

[dependencies.clap]
version = "*"
features = [ "suggestions", "color", "unstable" ]

[dependencies.r2d2_redis]
git = "https://github.com/chef/r2d2-redis.git"
branch = "update-r2d2"

[dependencies.habitat_builder_dbcache]
path = "../builder-dbcache"

[dependencies.habitat_core]
path = "../core"

[dependencies.habitat_depot_core]
path = "../depot-core"

[dev-dependencies]
url = "*"
uuid = "*"
