[package]
name = "habitat_depot"
version = "0.4.0"
authors = ["Adam Jacob <adam@chef.io>", "Jamie Winsor <reset@chef.io>", "Fletcher Nichol <fnichol@chef.io>", "Joshua Timberman <joshua@chef.io>", "Dave Parfitt <dparfitt@chef.io>"]
build = "build.rs"

[[bin]]
name = "hab-depot"
doc = false

[dependencies]
bincode = "*"
bitflags = "*"
env_logger = "*"
hyper = "*"
iron = "*"
libc = "*"
lazy_static = "*"
libarchive = "*"
lmdb-sys = "*"
log = "*"
openssl = "*"
regex = "*"
router = "*"
rust-crypto = "*"
rustc-serialize = "*"
time = "*"
toml = "*"
urlencoded = "*"
walkdir = "*"

[dependencies.clap]
version = "*"
features = [ "suggestions", "color", "unstable" ]

[dependencies.habitat_core]
path = "../core"

[dependencies.habitat_depot_core]
path = "../depot-core"

[dev-dependencies]
url = "*"
uuid = "*"
