[package]
name = "habitat_depot"
version = "0.6.0"
authors = ["Adam Jacob <adam@chef.io>", "Jamie Winsor <reset@chef.io>", "Fletcher Nichol <fnichol@chef.io>", "Joshua Timberman <joshua@chef.io>", "Dave Parfitt <dparfitt@chef.io>"]
build = "build.rs"

[[bin]]
name = "hab-depot"
doc = false

[dependencies]
bitflags = "*"
env_logger = "*"
hyper = "*"
iron = "*"
libc = "*"
lazy_static = "*"
libarchive = "*"
log = "*"
mount = "*"
openssl = "*"
protobuf = "*"
r2d2 = "*"
r2d2_redis = "*"
redis = "*"
regex = "*"
router = "*"
rust-crypto = "*"
rustc-serialize = "*"
time = "*"
toml = "*"
unicase = "*"
urlencoded = "*"
walkdir = "*"

[dependencies.clap]
version = "*"
features = [ "suggestions", "color", "unstable" ]

[dependencies.habitat_builder_dbcache]
path = "../builder-dbcache"

[dependencies.habitat_builder_protocol]
path = "../builder-protocol"

[dependencies.habitat_core]
path = "../core"

[dev-dependencies]
url = "*"
uuid = "*"

[features]
functional = []
