[package]
name = "habitat_director"
version = "0.0.0"
authors = ["Adam Jacob <adam@chef.io>", "Jamie Winsor <reset@chef.io>", "Fletcher Nichol <fnichol@chef.io>", "Joshua Timberman <joshua@chef.io>", "Dave Parfitt <dparfitt@chef.io>"]
build = "../build.rs"
workspace = "../../"

[lib]
name = "habitat_director"

[[bin]]
name = "hab-director"
doc = false

[[test]]
name = "functional"

[dependencies]
ansi_term = "*"
env_logger = "*"
libc = "*"
log = "*"
regex = "*"
rustc-serialize = "*"
time = "*"
toml = "*"
wonder = "*"

[dependencies.clap]
version = "*"
features = [ "suggestions", "color", "unstable" ]

[dependencies.habitat_core]
path = "../core"

[dependencies.habitat_sup]
path = "../sup"

[dependencies.uuid]
version = "*"
features = ["rustc-serialize"]

[dev-dependencies]
tempdir = "*"

[features]
functional = []

[profile.release]
lto = true
